# systtechbot

./: .env.example  .gitignore  CHANGES_DAILY_REPORTER.md  Makefile  QUICKSTART.md  README.md  SPRINT_S3_FILES.md  SPRINT_S3_QUICKSTART.md  SPRINT_S3_SUMMARY.md  alembic.ini  bot.py  config.py  constants.py  docker-compose.yml  idea.md  message_types.py  pyproject.toml  s3-dashboard-implementation.summary.md  test-output.xml  test_logs.ps1  vision.md
.cursor/commands/: review.md
.cursor/plans/: sprint-s1-db-implementation-6e475341.plan.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  workflow.mdc  workflow_tdd.mdc  workflow_tech_debt.mdc
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: a84cc4279d00_create_initial_schema.py
api/: README.md  __init__.py  config.py  main.py  models.py
api/collectors/: __init__.py  base.py  mock.py  real.py
api/tests/: __init__.py  (+1 more)
devops/: .dockerignore  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.example
doc/: QUALITY_IMPROVEMENTS.md  conventions.md  idea.md  refactoring_presentation.md  roadmap.md  tasklist.md  tasklist_tech_dept.md  vision.md  workflow.md
frontend/: .prettierignore  .prettierrc  QUICKSTART.md  README.md  package.json  pnpm-lock.yaml
handlers/: __init__.py  commands.py  messages.py
roles/: __init__.py  prompts.py
scripts/: create_test_data.py
services/: __init__.py  analytics.py  context.py  database.py  llm.py
tests/: test_commands.py  test_config.py  test_context.py  test_database.py  test_handlers.py  test_llm.py  test_prompts.py
(+58 files in other folders)
